# noplp-stats

./: .flake8  .gcloudignore  .pylintrc  Dockerfile.dev  LICENSE  Makefile  README.md  app.py  app.yaml  app_backup_dash.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yaml
.github/workflows/: codeql.yaml  commits.yaml  container-test.yaml  deploy.yaml  linting.yaml  main.yaml  scrapping-test.yaml  scrapping.yaml  tests.yaml
assets/css/: icon.css
data/: coverage_graph.csv  db_lyrics.csv  db_songs.csv  db_test.csv  db_test_full.csv  global_ranking.csv  songs.csv
deploy/: app-main.yaml  app-pr.yaml
noplp/: Exceptions.py  Scrapper.py  Song.py  compare_changes.py  create_database.py  exceptions.py  main.py  scrapper.py  song.py
pages/: about.py  bootstrap.py  bottom.py  bySinger.py  bySong.py  by_category.py  by_singer.py  by_song.py  global.py  global_dash.py  global_old.py  global_stats.py  home.py  home_dash.py  my_stats.py  new_training.py  tada.py  training.py  training_type.py  training_yes_no.py  trends.py  utils.py
pages/assets/css/: components.css  lyrics.css
pages/templates/: base.html  base_new.html  dash_page.html  dash_page_import.html  home.html  training.html
tests/: conftest.py  test_all.py  test_default.py  test_example_dash.py  test_interactions_timings.py
