[tool.poetry]
name = "noplp-stats"
version = "0.1.0"
description = "Data visualization of statistics about the TV show NOLPL."
authors = ["Mickaël Fontès <81414455+MickaelFontes@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "noplp"},{include = "pages"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^22.0.0"
dash = "^2.18.0"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.2"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
nbformat = "^5.10.4"
black = "^24.8.0"
flake8 = "^7.1.1"
pylint = "^3.2.6"
dateparser = "^1.1.8"
dash = {extras = ["testing"], version = "^2.18.0"}
urllib3 = "^1.26.20"
aiohttp = "^3.9.5"
aiolimiter = "^1.1.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
