[tool.poetry]
name = "noplp-stats"
version = "0.1.0"
description = "Data visualization of statistics about the TV show NOLPL."
authors = ["Mickaël Fontès <81414455+MickaelFontes@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "noplp"},{include = "pages"}]

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
dash = "^3.3.0"
dash-bootstrap-components = "^1.7.1"
pandas = "^2.3.3"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
nbformat = "^5.10.4"
black = "^25.11.0"
flake8 = "^7.1.2"
pylint = "^4.0.4"
dateparser = "^1.2.1"
dash = {extras = ["testing"], version = "^3.3.0"}
urllib3 = "^1.26.20"
aiohttp = {version = "^3.11.13", extras = ["speedups"]}
aiolimiter = "^1.2.1"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
